--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+.tooltip {
+    text-align: center;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 100;
+    transition: opacity 1s ease-in-out;
+  }
