--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
     text-align: center;
     border-radius: 5px;
     position: absolute;
+    padding: 4px 6px;
     z-index: 100;
     transition: opacity 1s ease-in-out;
   }
